test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/conflicting_variable_linkage.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  static
  int
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  ;
  }
  int
  identifier(foo)
  =
  const int(3)
  ;
